# dns_automation

./: db.sqlite3  pyproject.toml  requirements.txt
cloudflare_dns/: apps.py
cloudflare_dns/api/: urls.py
cloudflare_dns/api/view/: __init__.py  views.py
cloudflare_dns/migrations/: 0001_initial.py
cloudflare_dns/models/: __init__.py  dns_record.py
kernel/: settings.py  urls.py
source/: ip.txt
